--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
     <nav>
         <a href="index.html">صفحه اصلی</a>
-        <a href="ranking.html">رنکینگ تیم‌ها</a>
         <a href="news.html">اخبار</a>
+        <a href="jadval.html">جدول لیگ برتر</a>
+        <a href="roznameh.html">روزنامه</a>
+        <a href="video.html">ویدیو</a>
+         <a href="ranking.html">رنکینگ تیم‌ها</a>
     </nav>
 
     <div class="container">
@@ -35,7 +38,7 @@
     </div>
 
     <footer>
-        پروژه دانشگاهی - درس طراحی وب | ۱۴۰۴
+        تمامی حقوق مادی و معنوی متعلق یه سایت اخبار ورزشی است.
     </footer>
 
 </body>
